force-app/main/default/objects/Lead/fields/Browser_Language__c.field-meta.xml
<CustomField>
    <fullName>Browser_Language__c</fullName>
    <label>브라우저 언어</label>
    <length>80</length>
    <type>Text</type>
</CustomField>