force-app/main/default/objects/Lead/fields/Browser_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Browser_Timezone__c</fullName>
    <label>브라우저 시간대</label>
    <length>80</length>
    <type>Text</type>
</CustomField>