force-app/main/default/objects/Lead/fields/Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Budget_Range__c</fullName>
    <label>예산 범위</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>미정</fullName>
                <default>true</default>
                <label>미정</label>
            </value>
            <value>
                <fullName>1천만원 미만</fullName>
            </value>
            <value>
                <fullName>1천만-5천만원</fullName>
            </value>
            <value>
                <fullName>5천만-1억원</fullName>
            </value>
            <value>
                <fullName>1억원 이상</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>