force-app/main/default/objects/Lead/fields/Competitor_In_Use__c.field-meta.xml
<CustomField>
    <fullName>Competitor_In_Use__c</fullName>
    <label>현재 사용 대안/경쟁사</label>
    <length>255</length>
    <type>Text</type>
</CustomField>