force-app/main/default/objects/Lead/fields/Consultation_Type__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Type__c</fullName>
    <label>상담 유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>초기 상담</fullName>
                <default>true</default>
                <label>초기 상담</label>
            </value>
            <value>
                <fullName>견적 상담</fullName>
            </value>
            <value>
                <fullName>데모 상담</fullName>
            </value>
            <value>
                <fullName>기술 상담</fullName>
            </value>
            <value>
                <fullName>파트너 상담</fullName>
            </value>
            <value>
                <fullName>경쟁사 교체 상담</fullName>
            </value>
            <value>
                <fullName>렌탈 갱신 상담</fullName>
            </value>
            <value>
                <fullName>구매 전환 상담</fullName>
            </value>
            <value>
                <fullName>대형 설치 상담</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>