force-app/main/default/objects/Lead/fields/Contract_End_Window__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Window__c</fullName>
    <label>계약 종료 윈도우</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>미입력</fullName>
                <default>true</default>
                <label>미입력</label>
            </value>
            <value>
                <fullName>종료 지남</fullName>
            </value>
            <value>
                <fullName>30일 이내</fullName>
            </value>
            <value>
                <fullName>31-60일</fullName>
            </value>
            <value>
                <fullName>61-90일</fullName>
            </value>
            <value>
                <fullName>90일 초과</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>