force-app/main/default/objects/Lead/fields/Current_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_End_Date__c</fullName>
    <label>현재 계약 종료일</label>
    <type>Date</type>
</CustomField>