force-app/main/default/objects/Lead/fields/Current_Monthly_Rental_Fee__c.field-meta.xml
<CustomField>
    <fullName>Current_Monthly_Rental_Fee__c</fullName>
    <label>현재 월 렌탈비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>