force-app/main/default/objects/Lead/fields/Customer_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Customer_Scenario__c</fullName>
    <label>고객 상황</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>신규 도입</fullName>
                <default>true</default>
                <label>신규 도입</label>
            </value>
            <value>
                <fullName>렌탈 유지 검토</fullName>
            </value>
            <value>
                <fullName>렌탈→구매 전환</fullName>
            </value>
            <value>
                <fullName>경쟁사 교체</fullName>
            </value>
            <value>
                <fullName>추가 설치</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>