force-app/main/default/objects/Lead/fields/Desired_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Desired_Product_Type__c</fullName>
    <label>희망 제품 유형</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>정수전용</fullName>
            </value>
            <value>
                <fullName>냉온정</fullName>
            </value>
            <value>
                <fullName>얼음정수기</fullName>
            </value>
            <value>
                <fullName>대용량</fullName>
            </value>
            <value>
                <fullName>미정</fullName>
                <default>true</default>
                <label>미정</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>