force-app/main/default/objects/Lead/fields/Desired_Purchase_Budget__c.field-meta.xml
<CustomField>
    <fullName>Desired_Purchase_Budget__c</fullName>
    <label>희망 구매 예산</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>50만원 미만</fullName>
            </value>
            <value>
                <fullName>50만-100만원</fullName>
            </value>
            <value>
                <fullName>100만-300만원</fullName>
            </value>
            <value>
                <fullName>300만원 이상</fullName>
            </value>
            <value>
                <fullName>미정</fullName>
                <default>true</default>
                <label>미정</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>