force-app/main/default/objects/Lead/fields/Desired_Rental_Budget__c.field-meta.xml
<CustomField>
    <fullName>Desired_Rental_Budget__c</fullName>
    <label>희망 렌탈 예산</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5만원 미만</fullName>
            </value>
            <value>
                <fullName>5만-10만원</fullName>
            </value>
            <value>
                <fullName>10만-20만원</fullName>
            </value>
            <value>
                <fullName>20만원 이상</fullName>
            </value>
            <value>
                <fullName>미정</fullName>
                <default>true</default>
                <label>미정</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>