force-app/main/default/objects/Lead/fields/Estimated_Monthly_Rental_Fee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Monthly_Rental_Fee__c</fullName>
    <label>예상 월 렌탈료</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>