force-app/main/default/objects/Lead/fields/Estimated_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Amount__c</fullName>
    <label>예상 총 금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>