force-app/main/default/objects/Lead/fields/Estimated_Unit_Count__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Unit_Count__c</fullName>
    <label>예상 설치 대수</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>