force-app/main/default/objects/Lead/fields/Expected_Rental_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Expected_Rental_Term_Months__c</fullName>
    <label>예상 계약기간(개월)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>