force-app/main/default/objects/Lead/fields/Geo_City__c.field-meta.xml
<CustomField>
    <fullName>Geo_City__c</fullName>
    <label>도시</label>
    <length>80</length>
    <type>Text</type>
</CustomField>