force-app/main/default/objects/Lead/fields/Geo_Country__c.field-meta.xml
<CustomField>
    <fullName>Geo_Country__c</fullName>
    <label>국가</label>
    <length>80</length>
    <type>Text</type>
</CustomField>