force-app/main/default/objects/Lead/fields/Geo_Region__c.field-meta.xml
<CustomField>
    <fullName>Geo_Region__c</fullName>
    <label>지역</label>
    <length>80</length>
    <type>Text</type>
</CustomField>