force-app/main/default/objects/Lead/fields/Inquiry_Intent__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Intent__c</fullName>
    <label>문의 목적</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>견적 요청</fullName>
            </value>
            <value>
                <fullName>제품 문의</fullName>
            </value>
            <value>
                <fullName>데모 요청</fullName>
            </value>
            <value>
                <fullName>기술 문의</fullName>
            </value>
            <value>
                <fullName>파트너 문의</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>