force-app/main/default/objects/Lead/fields/Landing_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_URL__c</fullName>
    <label>랜딩 페이지 URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>