force-app/main/default/objects/Lead/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <label>고객 문제점</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>