force-app/main/default/objects/Lead/fields/Purchase_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Timeline__c</fullName>
    <label>도입 희망 시점</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>즉시</fullName>
            </value>
            <value>
                <fullName>1개월 이내</fullName>
            </value>
            <value>
                <fullName>3개월 이내</fullName>
            </value>
            <value>
                <fullName>6개월 이내</fullName>
            </value>
            <value>
                <fullName>6개월 이후</fullName>
            </value>
            <value>
                <fullName>미정</fullName>
                <default>true</default>
                <label>미정</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>