force-app/main/default/objects/Lead/fields/Referrer_URL__c.field-meta.xml
<CustomField>
    <fullName>Referrer_URL__c</fullName>
    <label>유입 Referrer URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>