force-app/main/default/objects/Lead/fields/Sales_Action_Summary__c.field-meta.xml
<CustomField>
    <fullName>Sales_Action_Summary__c</fullName>
    <label>영업 액션 요약</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>