force-app/main/default/objects/Lead/fields/Sales_Priority__c.field-meta.xml
<CustomField>
    <fullName>Sales_Priority__c</fullName>
    <label>영업 우선순위</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
                <default>true</default>
                <label>Cold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>