force-app/main/default/objects/Lead/fields/Sales_Routing_Group__c.field-meta.xml
<CustomField>
    <fullName>Sales_Routing_Group__c</fullName>
    <label>영업 라우팅 그룹</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>인바운드</fullName>
                <default>true</default>
                <label>인바운드</label>
            </value>
            <value>
                <fullName>인사이드 세일즈</fullName>
            </value>
            <value>
                <fullName>리텐션</fullName>
            </value>
            <value>
                <fullName>전략 영업</fullName>
            </value>
            <value>
                <fullName>엔터프라이즈</fullName>
            </value>
            <value>
                <fullName>파트너</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>