force-app/main/default/objects/Lead/fields/Service_Preference__c.field-meta.xml
<CustomField>
    <fullName>Service_Preference__c</fullName>
    <label>관리 선호 방식</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>방문 관리</fullName>
            </value>
            <value>
                <fullName>셀프 관리</fullName>
            </value>
            <value>
                <fullName>상관없음</fullName>
            </value>
            <value>
                <fullName>미정</fullName>
                <default>true</default>
                <label>미정</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>