force-app/main/default/objects/Lead/fields/Web_Form_Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>Web_Form_Submitted_At__c</fullName>
    <label>웹 폼 제출 일시</label>
    <type>DateTime</type>
</CustomField>